.metadata/.plugins/org.eclipse.cdt.ui/UART.build.log
14:01:03 **** Incremental Build of configuration Debug for project UART ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/tim.d" -MT"Core/Src/tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tim.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:63:34: warning: passing argument 2 of 'HAL_UART_Receive_IT' makes pointer from integer without a cast [-Wint-conversion]
   63 |     HAL_UART_Receive_IT(&huart2, rxData, sizeof(rxData));
      |                                  ^~~~~~
      |                                  |
      |                                  uint8_t {aka unsigned char}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:725:75: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint8_t' {aka 'unsigned char'}
  725 | HAL_StatusTypeDef HAL_UART_Receive_IT(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size);
      |                                                                  ~~~~~~~~~^~~~~
../Core/Src/main.c:64:35: warning: passing argument 2 of 'HAL_UART_Transmit_IT' makes pointer from integer without a cast [-Wint-conversion]
   64 |     HAL_UART_Transmit_IT(&huart2, rxData, sizeof(rxData));
      |                                   ^~~~~~
      |                                   |
      |                                   uint8_t {aka unsigned char}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:724:82: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'uint8_t' {aka 'unsigned char'}
  724 | HAL_StatusTypeDef HAL_UART_Transmit_IT(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size);
      |                                                                   ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:110:32: warning: passing argument 2 of 'HAL_UART_Receive_IT' makes pointer from integer without a cast [-Wint-conversion]
  110 |   HAL_UART_Receive_IT(&huart2, rxData, sizeof(rxData));
      |                                ^~~~~~
      |                                |
      |                                uint8_t {aka unsigned char}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:725:75: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint8_t' {aka 'unsigned char'}
  725 | HAL_StatusTypeDef HAL_UART_Receive_IT(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size);
      |                                                                  ~~~~~~~~~^~~~~
../Core/Src/main.c:122:14: error: subscripted value is neither array nor pointer nor vector
  122 |     if(rxData[0] == 'a' || rxData[0] == 'b' || rxData[0] == 'c')
      |              ^
../Core/Src/main.c:122:34: error: subscripted value is neither array nor pointer nor vector
  122 |     if(rxData[0] == 'a' || rxData[0] == 'b' || rxData[0] == 'c')
      |                                  ^
../Core/Src/main.c:122:54: error: subscripted value is neither array nor pointer nor vector
  122 |     if(rxData[0] == 'a' || rxData[0] == 'b' || rxData[0] == 'c')
      |                                                      ^
../Core/Src/main.c:124:7: error: 'dutyValue' undeclared (first use in this function)
  124 |       dutyValue = rxData[0];
      |       ^~~~~~~~~
../Core/Src/main.c:124:7: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:124:25: error: subscripted value is neither array nor pointer nor vector
  124 |       dutyValue = rxData[0];
      |                         ^
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

14:01:04 Build Failed. 7 errors, 3 warnings. (took 881ms)

